setInterval, getElementById,querySelector,onclick,addEventListener

--- a/01-document.html
+++ b/01-document.html
@@ -3,10 +3,115 @@
 <head>
 	<title>01 document属性</title>
 	<meta charset="utf-8">
-	<style type="text/css"></style>
+	<meta name="viewport" 
+		content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<style type="text/css">
+		div{
+			border:1 px solid #aaa;
+		}
+		.parent{
+			height:200px;
+			width: 200px;
+			padding:30px;
+			background-color: #0aa;
+		}
+		.child{
+			height: 100px;
+			width: 100px;
+			background-color: #90c;
+		}
+		span {
+			font-size:30px;
+			cursor:pointer;
+		}
+
+
+	</style>
 </head>
+
 <body>
+
+	<!-- <p id="p1" class="cd1">段落1</p>
+	<p id="p2">段落2</p>
+	<p id="p3">段落3</p>
+
+	<div id="d1" class="cd1" lq="sss">
+		<span>你好啊</span>
+		<p>学习群体是：abc。</p>
+
+	</div> -->
+
+	<!-- <p>11</p>
+	<p>22</p>
+	<p>33</p>
+	<p>44</p>
+	<h1>我是谁</h1>
+	<div class="tem">混淆</div> -->
+
+	<!-- <p>k1k</p>
+	<p>k2k</p>
+	<p>k3k</p>
+	<div class="pss1">hi,1</div>
+	<div class="pss2">hi,2</div>
+	<div class="pss3">hi,3</div> -->
+	<!-- <div class="c1">第一个div</div>
+	<p class="tm">学习学习学习，段落</p>
+	<h3 id="tmd">好好学习，标题</h3> -->
+
+	<!-- <p>ss1</p>
+	<p class="tm">ss2</p>
+	<p class="tm">ss3</p> -->
+
+	<!-- 元素绑定事件 -->
+	<!-- <p onclick=alert("study")>学习啊是的</p>
+	<input type="button" value="click" 
+		name="btn" 
+		onclick=alert("right.")> -->
+
+	<!-- 给所有的li标签绑定点击事件，并弹出li标签的内容 -->
+	<!-- <ul id="citylist">
+		<li>beijing 1</li>
+		<li>beijing 2</li>
+		<li>beijing 3</li>
+		<li>beijing 4</li>
+		<li>beijing 5</li>
+
+	</ul>
+
+	<div id="tm">学习资料</div> -->
+
+	<!-- <div class="parent">父级
+		<div class="child">子级</div>
+	</div>
+
+	<input id="btn" type="button" value="click"> -->
+
+	<!-- 五角星案例 -->
+	<!-- <div class="wjx-wrap">
+		<span>☆</span>
+		<span>☆</span>
+		<span>☆</span>
+		<span>☆</span>
+		<span>☆</span>
+	</div>	 -->
+
+	<!-- 动态创建li标签案例 -->
+	<!-- <input id="btnAdd" type="button" value="add">
+	<ul class="list"></ul> -->
+
+	<input type="button" value="点击按钮" id="btnClick">
+	<input type="button" value="解除绑定" id="btnRemove">
+
+
+
+
+
+
 	<script type="text/javascript"
 	src="01-JS.js"></script>
 </body>
 </html>
+
+
+
