--- a/06-JS focus.html
+++ b/06-JS focus.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8">
 </head>
 <body>
-	<input id="txt1" type="text" name="">
-	<input id="txt2" type="text" name="">
+	txt1: <input id="txt1" type="text" name="">
+	txt2: <input id="txt2" type="text" name="">
 	<input id="btnFocus2" type="button" value="txt2 get">
 
 
