--- a/jQuery/jQuery-Case-append-youtube.html
+++ b/jQuery/jQuery-Case-append-youtube.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>case append on youtube</title>
+    <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <style>
         html, body, div {
             margin: 0;
@@ -12,28 +14,36 @@
         }
         .label-wrap {
             width: 300px;
-            height: 30px;
+            /* height: 30px; */
             line-height: 30px;
             padding: 10px;
-            /* margin: 100px 40%;
-            position: absolute;*/
+            margin: 100px auto;
+            /* position: absolute; */
             border: 1px solid #ccc; 
-             overflow: hidden;  /*防止父容器塌陷 */
+            overflow: hidden;  /*防止父容器塌陷 */
         }
 
         .label-wrap .txt-lb {
-            border:none;
+            border:1px solid #fff;
             outline: none;
             height: 30px;
             width: 60px;
             line-height: 30px;
             float: left;
+            margin: 5px;
         }
         .label-wrap .lb-span {
             float: left;
             border:1px solid #ccc;
             padding: 0 10px;
-            margin-right: 10px;
+            margin: 5px;
+        }
+        
+        .label-wrap i {
+            font-size: 5px;
+            color: red;
+            margin-right: -5px;
+            margin-left: 5px;
         }
 
     </style>
@@ -41,8 +51,9 @@
 </head>
 <body>
     <div class="label-wrap">
-        <span class="lb-span">jQuery</span>
-        <span class="lb-span">jQuery</span>
+        <span class="lb-span">jQuery<i class="glyphicon glyphicon-remove"></i></span>
+        <span class="lb-span">jQuery<i class="glyphicon glyphicon-remove"></i></span>
+
         <input type="text" class="txt-lb">
     </div>
     
