--- a/Vue-file/vue-router-learning/bjsfa/public/index.html
+++ b/Vue-file/vue-router-learning/bjsfa/public/index.html
@@ -8,7 +8,7 @@
     <title>bjsfa</title>
     <style>
       body {
-        background-color: #f5fffa;
+        background-color: #ffe4e1;
       }
     </style>
   </head>
