--- a/Vue-file/vue-router-learning/bjsfa/public/index.html
+++ b/Vue-file/vue-router-learning/bjsfa/public/index.html
@@ -6,13 +6,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>bjsfa</title>
-    <style>
-      body {
-        background-color: #ffe4e1;
-      }
-    </style>
+    
   </head>
-  <body>
+  <body id="body">
     <noscript>
       <strong
         >We're sorry but bjsfa doesn't work properly without JavaScript enabled.
@@ -21,5 +17,10 @@
     </noscript>
     <div id="appp"></div>
     <!-- built files will be auto injected -->
+    <script>
+        var colorArr = ["#fff0f5","#e6e6fa","#ffe4c4"]
+        
+        document.body.style.backgroundColor = colorArr[1];
+    </script>
   </body>
 </html>
