--- a/Canvas/konva/01_konva_rect.html
+++ b/Canvas/konva/01_konva_rect.html
@@ -13,7 +13,7 @@
 
     <script>
         // 1. 创建舞台
-        var state = new Konva.Stage({
+        var stage = new Konva.Stage({
             container: "container",
             width: window.innerWidth, // 全屏
             height: window.innerHeight
@@ -23,7 +23,7 @@
         var layer = new Konva.Layer();
 
         // 3. 
-        state.add(layer);
+        stage.add(layer);
 
         // 4.
         var rect = new Konva.Rect({
