--- a/TypeScript/ts_mvp_3/index.html
+++ b/TypeScript/ts_mvp_3/index.html
@@ -8,14 +8,9 @@
     <link rel="stylesheet" href="./app.css">
     <script src="./node_modules/jquery/dist/jquery.js"></script>
     <script src="./app.js"></script>
-   
 </head>
 <body>
-    <div id="main-layout">
-
-    </div>
+    <div id="main-layout"></div>
     
-   
-
 </body>
 </html>
